java/base/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: java-app
  namespace: default
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    spec:
      containers:
        - name: app
          resources:
            requests:
              memory: 512Mi
          imagePullPolicy: Always          
          image: 'appimage'
          # env:
          #   - name: aliyun_logs_java-tj
          #     value: stdout
          readinessProbe:
            failureThreshold: 1
            initialDelaySeconds: 7
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1     
          livenessProbe:
            failureThreshold: 1
            initialDelaySeconds: 15
            periodSeconds: 15
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 3
      schedulerName: default-scheduler      
      securityContext: {}
      dnsPolicy: ClusterFirst
      # imagePullSecrets:
      #   - name: 
      restartPolicy: Always
  replicas: 2
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 600
