java/base/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/alicloud-loadbalancer-id: lb-abcde
  name: service
  namespace: 
spec:  
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  externalTrafficPolicy: Local
  selector:
    app: appname
  sessionAffinity: None
  type: LoadBalancer
