java/base/service-vip.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: default
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: appname
  sessionAffinity: ClientIP
  # 0.5天
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 43200
  type: ClusterIP
